--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-        <button type = "button" class = "btn btn-primary" onclick = "#">Start Quiz</button>
-    
+        <button type = "button" class = "btn btn-primary" onclick = "timer()">Start Quiz</button>
+        <p id = "pageTimer"></p>
 </body>
 <script src="assets/javascript.js"></script>
 </html>
