--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <form onsubmit="saveInitials(this)">
                             Enter your Initials Here:
                             <input id = "initials" type = "text">
-                            <input id = "submit" type = "submit">
+                            <input id = "submitBtn" type = "submit">
                         </form>
                     </div>
                     <button type = "button" class = "btn btn-primary m-2" id = "start" onclick = "buildQuiz()">Start Quiz</button>
